--- a/style.css
+++ b/style.css
@@ -191,10 +191,10 @@ body {
 
 /* ====== contact-us button */
 .contact-us {
-  margin-left: 15px;
+  /* margin-left: 15px; */
   height: 40px;
   width: 120px;
-  font-size: 17px;
+  font-size: 16px;
   margin-block: 10px;
   text-transform: capitalize;
   font-family: var(--font1);
