--- a/style.css
+++ b/style.css
@@ -881,7 +881,7 @@ body {
     text-align: center;
     text-transform: capitalize;
     position: relative;
-    top: 25px;
+    top: 80px;
   }
 
   .categories h1 {
@@ -930,7 +930,8 @@ body {
     background-image: url(img66.png);
     background-position: center center;
     background-size: cover;
-    top: 10px;
+    top: 100px;
+    height: 710px;
   }
 
   /* about us secton */
@@ -1010,7 +1011,7 @@ body {
 
   /* ======= team ========== */
   .team {
-    top: 20px;
+    top: 110px;
   }
 
   .team .team-heading {
@@ -1063,7 +1064,7 @@ body {
   .footer {
     width: 100%;
     height: auto;
-    top: 40px;
+    top: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
