--- a/contactus.css
+++ b/contactus.css
@@ -31,7 +31,7 @@ html {
 /* ============================ contact =========================== */
 #contact-topheading{
     font-size: 50px;
-    color: var(--secondrycolor);
+    color: var(--textcolor);
     margin-top: 100px;
 }
 .contactus{
@@ -64,15 +64,24 @@ html {
     border-radius: 10px;
     height: auto;
     margin: 12px;
-    background-color: #fff;
+    /* background-color: #fff; */
     color: black;
 }
 .contact-left .g{
     width: 83%;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
-.contact-left div h3{
+.contact-left .g img{
+    height: auto;
+    width: 300px;
+    mix-blend-mode: darken;
+}
+.contact-left div h4{
     text-align: center;
     margin-top:10px ;
+    font-weight: 500;
 }
 .contact-left div i{
     color: var(--secondrycolor);
@@ -94,9 +103,10 @@ html {
     text-align: center;
 }
 .contact-left div p{
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     margin-top: 15px;
+    font-weight: 650;
 }
 #heart{
     display: inline;
@@ -223,6 +233,11 @@ button {
         display: block;
         padding: 30px;
     }
+    .container{
+        width: 100%;
+        height:75vh;
+        display:flex;
+    }
     .contact-right {
         width: 100%;
         padding-top: 40px;
@@ -258,6 +273,9 @@ button {
     }
     .contact-left div p{
         font-size: 15px;
+    }
+    #emaill{
+        font-size: 12px;
     }
     #contact h1{
         font-size: 28px;
