--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ body {
   outline: none;
   border: none;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 /* ========= categories ========== */
@@ -597,18 +598,23 @@ body {
 }
 
 #pic1 {
-  background: url(dp.jpg);
+  background: url(Team/dp.jpg);
   background-position: center;
   background-size: cover;
 }
 #pic2{
-  background: url(arman.jpg);
+  background: url(Team/arman1.jpg);
   background-size: cover;
   /* background-position: center; */
 }
 #pic3{
-  background: url(ismail.jpg);
+  background: url(Team/vimdhayak.jpg);
   background-size: cover;
+}
+#pic4{
+  background: url(Team/gian.jpg);
+  background-size: cover;
+  background-position: center;
 }
 .card1 h1 {
   color: #1ab79d;
@@ -680,12 +686,12 @@ body {
 /* =========== footer =========== */
 .footer {
   width: 100%;
-  height: 600px;
+  height: 400px;
   /* background-color: #1ab79d; */
   background-image: url(img1.png);
   background-size: cover;
   position: relative;
-  top: 400px;
+  top: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
