--- a/style.css
+++ b/style.css
@@ -603,12 +603,12 @@ body {
   background-size: cover;
 }
 #pic2{
-  background: url(Team/arman1.jpg);
+  background: url(Team/arman.jpg);
   background-size: cover;
   /* background-position: center; */
 }
 #pic3{
-  background: url(Team/vimdhayak.jpg);
+  background: url(Team/ismail.jpg);
   background-size: cover;
 }
 #pic4{
