--- a/career.css
+++ b/career.css
@@ -74,11 +74,103 @@ html {
 }
 
 /* career section main content  */
+#career-guide {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 50px;
+}
 
+#career-headingg {
+    text-align: center;
+    font-size: 32px;
+    text-transform: capitalize;
+    color: var(--secondrycolor);
+    background-color: black;
+    margin: 0px 50px;
+    padding: 5px;
+}
 
+.main-container {
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 65%;
+    margin: auto;
+}
 
+.main-container ol li {
+    font-size: 27px;
+    font-family: var(--font1);
+    font-weight: 600;
+    margin-top: 30px;
+    text-transform: capitalize;
+}
 
+.image {
+    display: flex;
+    justify-content: center;
+    /* padding: 20px; */
+    margin-top: 20px;
+}
 
+.image p {
+    font-size: 22px;
+    /* margin: 15px; */
+    margin: 20px 0px;
+    text-transform: capitalize;
+    width: 70%;
+
+}
+
+.image img {
+    margin-left: 15px;
+    height: auto;
+    width: 30%;
+}
+
+/* mca section  */
+.mca {
+    margin: 50px 0px;
+    margin-top: 100px;
+}
+
+.mca h1 {
+    text-align: center;
+    font-size: 35px;
+    color: var(--secondrycolor);
+    border: 1px solid black;
+    background-color: black;
+}
+
+.mca p {
+    font-size: 23px;
+    margin-top: 60px;
+    text-transform: capitalize;
+}
+
+.mca h3 {
+    font-size: 28px;
+    margin-top: 30px;
+    text-transform: capitalize;
+}
+
+.mca ul li {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    text-transform: capitalize;
+}
+
+.mca ol li {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    text-transform: capitalize;
+}
 
 /*======== css for small screens =========*/
 @media only screen and (max-width:600px) {
@@ -116,11 +208,94 @@ html {
         padding-left: 0px;
         display: flex;
         justify-content: center;
-        margin-top: 25px;
+        margin-top: 50px;
     }
 
     .header-image img {
         height: 200px;
         width: auto;
     }
+
+    /* career section main content  */
+    #career-guide {
+        height: auto;
+        padding: 0px 20px;
+
+    }
+
+    #career-headingg {
+        text-align: center;
+        font-size: 15px;
+        margin: 0px 20px;
+
+    }
+
+    .main-container {
+        padding: 0px 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .main-container ol li {
+        font-size: 18px;
+        margin-top: 40px;
+        margin-left: 15px;
+    }
+
+    .image {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    .image p {
+        font-size: 15px;
+        margin: 0px 0px;
+        width: 100%;
+    }
+
+    .image img {
+        margin-left: 0px;
+        height: auto;
+        width: 100%;
+    }
+    /* mca section  */
+.mca {
+    margin-top: 120px;
+}
+
+.mca h1 {
+    text-align: center;
+    font-size: 19px;
+    color: var(--secondrycolor);
+    border: 1px solid black;
+    background-color: black;
+}
+
+.mca p {
+    font-size: 15px;
+    text-transform: capitalize;
+    margin: 35px 20px;
+}
+
+.mca h3 {
+    font-size: 18px;
+    margin: 20px;
+    margin-top: 30px;
+}
+
+.mca ul li {
+    font-size: 15px;
+    margin-top: 5px;
+    margin-left: 35px;
+}
+
+.mca ol li {
+    font-size: 15px;
+    margin-top: 5px;
+    margin-left: 35px;
+}
 }
