--- a/pyq.css
+++ b/pyq.css
@@ -24,6 +24,9 @@ html {
     --headingcolor: #1ab79d;
     --textcolor: #1f1f1f;
 }
+body{
+    font-family: var(--font1);
+}
 
 /*  pyq style  */
 .head-er {
@@ -44,18 +47,18 @@ html {
     text-transform: capitalize;
     padding-top: 110px;
     padding-left: 100px;
-    font-size: 50px;
+    font-size: 45px;
     font-family: var(--font1);
     font-weight: 600;
 }
 
 .yellowish {
-    color: var(--secondrycolor);
+    color: #4664e4;
 }
 
 .header-content p {
     text-transform: capitalize;
-    font-size: 23px;
+    font-size: 22px;
     padding: 20px 80px 0px 100px;
     font-weight: 300;
 }
@@ -68,7 +71,7 @@ html {
 }
 
 .header-image img {
-    height: 350px;
+    height: 300px;
     width: auto;
 }
 
@@ -82,8 +85,9 @@ html {
 
 #pyq-heading {
     font-size: 35px;
-    font-weight: 500;
+    font-weight: 700;
     text-align: center;
+    letter-spacing: 1px;
     text-transform: capitalize;
 }
 
@@ -100,7 +104,7 @@ img {
 }
 
 .btn {
-    color: #eca90d;
+    color: #4664e4;
     padding: 0.8rem;
     font-size: 14px;
     text-transform: uppercase;
@@ -164,9 +168,9 @@ img {
 
 .card_title {
     color: black;
-    font-size: 1.1rem;
+    font-size: 20px;
     font-weight: 700;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
     text-transform: capitalize;
     margin: 0px;
     height: 50px;
@@ -176,7 +180,8 @@ img {
     color: black;
     font-size: 0.875rem;
     line-height: 1.5;
-    margin-bottom: 1.25rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
     font-weight: 400;
 }
 
