--- a/style.css
+++ b/style.css
@@ -582,7 +582,7 @@ body {
 }
 
 .team-card .team-content button {
-  width: 125px;
+  width: 100%;
   height: 30px;
   font-size: 15px;
   text-transform: capitalize;
@@ -752,6 +752,7 @@ body {
 .section2 ul li a {
   color: #ffffffc7;
   text-decoration: none;
+  text-transform: capitalize;
 }
 
 .section2 ul li a:hover {
@@ -773,6 +774,7 @@ body {
 
 .section3 ul li {
   margin: 10px 0px;
+  text-transform: capitalize;
 }
 
 /*======== css for small screens =========*/
