--- a/style.css
+++ b/style.css
@@ -599,7 +599,7 @@ body {
 }
 
 #pic1 {
-  background: url(Team/dp.jpg);
+  background: url(Team/profile.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -613,7 +613,7 @@ body {
   background-size: cover;
 }
 #pic4{
-  background: url(Team/gian.jpg);
+  background: url(Team/profile.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -1030,12 +1030,12 @@ body {
 
   .team-cards {
     width: 85%;
-    height: 600px;
+    height: 400px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
+      /* justify-content: space-evenly;
+      align-items: center;
+      flex-direction: column;
+      flex-wrap: wrap; */
   }
 
   .team-cards .team-card {
